--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-09  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-menu.el (calc-modes-menu): Add entries for matrix
+	modes and simplification modes.
+
 2012-08-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* delsel.el (delete-selection-pre-hook): Don't propagate the
