--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-08-09  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el: Enhancements to forward-sexp.
+	(python-nav-forward-sexp): Rename from
+	python-nav-forward-sexp-function.
+	(python-nav--forward-sexp, python-nav--backward-sexp): New
+	functions.
+
 2012-08-09  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-menu.el (calc-modes-menu): Add entries for matrix
