--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-09  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Use TSET for write access to Lisp_Object slots of struct terminal.
+	* termhooks.h (TSET): New macro.
+	* coding.c, terminal.c, xselect.c: Adjust users.
+
 2012-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* xdisp.c (safe_eval_handler): Remove prototype.  Receive args describing
