--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-09  Chong Yidong  <cyd@gnu.org>
 
+	* descr-text.el (describe-char): Don't insert extra newlines
+	(Bug#10127).
+
 	* vc/log-view.el (log-view-diff): Use use-region-p (Bug#10133).
 	(log-view-diff-changeset, log-view-minor-wrap): Likewise.
 
