Remove some make-docfile.c undes that are no longer needed
* lib-src/make-docfile.c (main):
(fopen) [!WINDOWSNT]:
(chdir) [!DOS_NT]: No more need to undef.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,5 +1,9 @@
 2012-08-10  Glenn Morris  <rgm@gnu.org>
 
+	* make-docfile.c (main):
+	(fopen) [!WINDOWSNT]:
+	(chdir) [!DOS_NT]: No more need to undef.
+
 	* movemail.c (DIRECTORY_SEP, IS_DIRECTORY_SEP):
 	* make-docfile.c (DIRECTORY_SEP, IS_DIRECTORY_SEP):
 	* emacsclient.c (DIRECTORY_SEP, IS_DIRECTORY_SEP, IS_DEVICE_SEP):
