--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-10  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (config_h): Fix conf_post.h out-of-tree build location.
+
 	* lisp.h (DIRECTORY_SEP): Let configure set it.
 
 2012-08-09  Dmitry Antipov  <dmantipov@yandex.ru>
