--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-10  Glenn Morris  <rgm@gnu.org>
+
+	* tutorial.el (help-with-tutorial):
+	* emacs-lisp/copyright.el (copyright-update-directory):
+	* emacs-lisp/autoload.el (autoload-find-generated-file)
+	(autoload-find-file): Disable local eval: (for insurance).
+
 2012-08-07  Glenn Morris  <rgm@gnu.org>
 
 	* files.el (hack-local-variables-filter): If an eval: form is not
