--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-10  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32fns.c <w32_unicode_gui>: New static variable.
+	(globals_of_w32fns): Initialize it according to os_subtype.
+	(w32_init_class, w32_msg_pump, w32_wnd_proc): Use it instead of
+	testing os_subtype.
+
 2012-08-10  Joakim Hårsman  <joakim.harsman@gmail.com>  (tiny change)
 	    Eli Zaretskii  <eliz@gnu.org>
 
