--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,13 @@
+2012-08-10  Masatake YAMATO  <yamato@redhat.com>
+
+	* mouse.el (popup-menu-normalize-position): New function.
+	(popup-menu): Use `popup-menu-normalize-position' to normalize
+	the form for POSITION argument.
+
+	* term/x-win.el (x-menu-bar-open):
+	Use the value returend from (posn-at-point) as position
+	passed to `popup-menu'.
+
 2012-08-09  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calccomp.el (math-compose-expr): Add extra argument
@@ -35,8 +45,8 @@
 	* progmodes/python.el: Enhancements to forward-sexp.
 	(python-nav-forward-sexp): Rename from
 	python-nav-forward-sexp-function.
-	(python-nav--forward-sexp, python-nav--backward-sexp): New
-	functions.
+	(python-nav--forward-sexp, python-nav--backward-sexp):
+	New functions.
 
 2012-08-09  Jay Belanger  <jay.p.belanger@gmail.com>
 
@@ -489,9 +499,8 @@
 
 	* register.el (copy-to-register, copy-rectangle-to-register):
 	Deactivate the mark, and use indicate-copied-region (Bug#10056).
-	(append-to-register, prepend-to-register): Call
-
-2012-07-29  Juri Linkov  <juri@jurta.org>
+	(append-to-register, prepend-to-register):
+	Call 2012-07-29  Juri Linkov  <juri@jurta.org>
 
 	* simple.el (async-shell-command-buffer): New defcustom.
 	(shell-command): Use it.  (Bug#4719)
