--- a/etc/NEWS
+++ b/etc/NEWS
@@ -556,6 +556,8 @@ are deprecated and will be removed eventually.
 
 ** New functions `autoloadp' and `autoload-do-load'.
 
+** New function `posnp' to test if an object is a `posn'.
+
 ** `function-get' fetches the property of a function, following aliases.
 
 ** `toggle-read-only' accepts a second argument specifying whether to
