Bind M-= back to count-words-region, and let it accept a prefix arg.
* lisp/bindings.el: Bind M-= back to count-words-region.

* lisp/simple.el (count-words-region): Accept a prefix arg for acting
on the entire buffer.
(count-words--buffer-message): New helper function.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -176,7 +176,7 @@ prompts for a column number.
 ** `mouse-avoidance-banish-position' can now be used to customize
 `mouse-avoidance-mode' further.
 
-** `M-=' is now bound to `count-words', not `count-words-region'.
+** `C-u M-=' now counts lines/words/characters in the entire buffer.
 
 ** `C-M-f' and `C-M-b' will now move to the path name separator
 character when doing minibuffer filename prompts.
