Move IF_LINT from lisp.h to conf_post.h
* src/conf_post.h (IF_LINT, lint_assume): Move here from lisp.h.
* src/lisp.h (IF_LINT, lint_assume): Move to conf_post.h.

* lib-src/make-docfile.c (IF_LINT):
* lib-src/emacsclient.c (IF_LINT): Remove (in config.h now).

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-10  Glenn Morris  <rgm@gnu.org>
+
+	* conf_post.h (IF_LINT, lint_assume): Move here from lisp.h.
+	* lisp.h (IF_LINT, lint_assume): Move to conf_post.h.
+
 2012-08-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Fix last change to allow compilation with low optimization levels.
