--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,5 +1,8 @@
 2012-08-10  Glenn Morris  <rgm@gnu.org>
 
+	* make-docfile.c (IF_LINT):
+	* emacsclient.c (IF_LINT): Remove (in config.h now).
+
 	* make-docfile.c (main):
 	(fopen) [!WINDOWSNT]:
 	(chdir) [!DOS_NT]: No more need to undef.
