--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,11 @@
+2012-08-10  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el (ruby-should-indent):
+	Add docstring, check (current-indentation) instead of (current-column).
+	(ruby-should-indent-buffer): New function.
+	Add tests for `ruby-deep-indent-paren' behavior.
+	Port all tests from test/misc/test_ruby_mode.rb in Ruby repo.
+
 2012-08-09  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el (ruby-should-indent)
@@ -6,8 +14,8 @@
 
 2012-07-29  David Engster  <deng@randomsample.de>
 
-	* automated/xml-parse-tests.el (xml-parse-tests--qnames): New
-	variable to hold test data for name expansion.
+	* automated/xml-parse-tests.el (xml-parse-tests--qnames):
+	New variable to hold test data for name expansion.
 	(xml-parse-tests): Test the two different types of name expansion.
 
 2012-07-29  Juri Linkov  <juri@jurta.org>
