--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/rx.el (rx-constituents): Don't define as constant.
+	(rx-form): Simplify.
+
 2012-08-09  Dmitry Gutov  <dgutov@yandex.ru>
 
 	Merge stuff from upsteam ruby-mode, part 1 (bug#12169).
