--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-agent.el (gnus-agent-cat-defaccessor, gnus-agent-cat-groups):
+	Use defsetf.
+
 2012-08-10  Daiki Ueno  <ueno@unixuser.org>
 
 	* auth-source.el: (auth-source-plstore-search)
