Last change fixes Bug#12069

--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,7 +1,7 @@
 2012-08-11  Jason Rumney  <jasonr@gnu.org>
 
 	* url-http.el (url-http-create-request): Use url-http-proxy to
-	look up proxy credentials.
+	look up proxy credentials (Bug#12069).
 
 2012-07-28  David Engster  <deng@randomsample.de>
 
