--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-12  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-units.el (math-default-units-table): Give an
+	initial value.
+	(math-put-default-units): Add options to put composite units and
+	unit systems in the default units table.
+	(calc-convert-units): Send composite units to
+	`math-put-default-units' when appropriate.
+
 2012-08-11  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/copyright.el (copyright-update-directory): Logic fix.
