--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-12  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* descr-text.el (describe-char): Put the overlays over the
+	"displayed as" character.
+
 2012-08-12  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-units.el (math-default-units-table): Give an
